# satella

./: .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST  MANIFEST.in  README.md  Vagrantfile  build.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  unittest.cfg  unittests.py
.circleci/: config.yml
.github/workflows/: ci.yml
channels/: __init__.py  base.py  exceptions.py  ls.py  lshl.py  sockets.py  subtypes.py
channels/network/: sockets.py
channels/sockets/: sockets.py  sslsockets.py
channels/unittests/: __init__.py  locksignalledchannel.py  sockets.py  sslsockets.py
contrib/: __init__.py  bhtipi.py  instrumentation_as_json.py
contrib/bhtipi/: __init__.py
db/pool/: __init__.py
db/unittests/: pool.py
docs/: Makefile  cassandra.rst  conf.py  cpu_time.rst  dao.rst  db.rst  debug.rst  distutils.rst  exception_handling.rst  exceptions.rst  files.rst  import.rst  index.rst  json.rst  make.bat  opentracing.rst  parsing.rst  posix.rst  processes.rst  random.rst  recipes.md  time.rst
docs/coding/: call_hierarchy.rst  concurrent.rst  ctxt_managers.rst  debug.md  decorators.rst  environment.rst  functions.rst  futures.rst  monitor.md  optionals.rst  predicates.rst  sequences.rst  structures.rst  transforms.rst  typechecking.md  typing.rst  var_managers.rst
docs/configuration/: index.rst  schema.rst  sources.rst
docs/debug/: tainting.rst
docs/examples/: echoist.md
docs/exception_handling/: index.rst
docs/instrumentation/: cpu_time.rst  management.md  memory.rst  metrics.md  metrics.rst  traceback.md  traceback.rst
docs/source/: modules.rst  satella.coding.debug.rst  satella.coding.rst  satella.instrumentation.rst  satella.rst  satella.unix.rst
examples/echoist/: __init__.py  run.py
instrumentation/: __init__.py  base.py  basecounter.py  exc_formatter.py  exceptions.py  insmgr.py  snapshots.py
instrumentation/counters/: __init__.py  deltacounter.py  integervaluecounter.py  numericvaluecounter.py  pulsecounter.py  stringvaluecounter.py
instrumentation/exctrack/: objects.py
instrumentation/logging/: __init__.py  base.py  logentry.py  logentrysetinterface.py  loggerinterface.py  logset.py
instrumentation/unittests/: __init__.py  callbackcounter.py  countercollection.py  deltacounter.py  exctrack.py  instrumentationmanager.py  integervaluecounter.py  logging.py  namespacemanager.py  numericvaluecounter.py  pulsecounter.py
network/: __init__.py  encryption.py  exceptions.py  selectloop.py  socket.py  sockets.py  ssl.py
satella/: __init__.py  coordinator.py  daemon.py  dao.py  db.py  distutils.py  exception_handling.py  exceptions.py  files.py  imports.py  json.py  parsing.py  pidlock.py  posix.py  processes.py  random.py  time.py  unittests.py  warnings.py
satella/cassandra/: __init__.py  common.py  future.py  parallel.py
satella/channels/: __init__.py  base.py  exceptions.py  subtypes.py
satella/channels/sockets/: __init__.py  sockets.py
satella/channels/unittests/: __init__.py  sockets.py  utils.py
satella/coding/: __init__.py  _safe_typing.py  algos.py  call_hierarchy.py  compressed.py  ctxt_managers.py  decorators.py  deep_compare.py  deleters.py  environment.py  expect_exception.py  fun_static.py  generators.py  iterators.py  metaclasses.py  misc.py  monitor.py  optionals.py  overloading.py  predicates.py  recast_exceptions.py  singleton.py  structures.py  typecheck.py  typednamedtuple.py  typing.py  var_managers.py
satella/coding/concurrent/: __init__.py  atomic.py  callablegroup.py  functions.py  futures.py  queue.py  (+11 more)
satella/configuration/: __init__.py  schema.py
satella/cpu_time/: __init__.py  collector.py  concurrency.py
satella/dao/: __init__.py
satella/db/: __init__.py
satella/debug/: __init__.py  test_environment.py
satella/exception_handling/: __init__.py  dump_to_file.py  exception_handlers.py  global_eh.py  memerrhandler.py
satella/instrumentation/: __init__.py  dump_frames_on.py  instrument.py  metrics.py  trace_back.py
satella/opentracing/: __init__.py  exceptions.py  trace.py
satella/os/: __init__.py  daemon.py  forking.py  misc.py  pidlock.py  signals.py
satella/posix/: __init__.py  daemon.py  pidlock.py  signals.py
satella/ressave/: __init__.py
satella/state/: __init__.py  base.py  posixpart.py
satella/time/: __init__.py  backoff.py  measure.py  misc.py  parse.py
satella/unix/: __init__.py
tests/: __init__.py  test_cassandra.py  test_cpu_time.py  test_dao.py  test_db.py  test_debug.py  test_docker.sh  test_exceptions.py  test_files.py  test_json.py  test_opentracing.py  test_parsing.py  test_processes.py  test_random.py  test_tainting.py  test_time.py  test_warnings.py
tests/test_coding/: test_algos.py  test_call_hierarchy.py  test_concurrent.py  test_debug.py  test_decorators.py  test_deep_compare.py  test_deleters.py  test_environment.py  test_fun_static.py  test_iterators.py  test_locked_dataset.py  test_metaclasses.py  test_misc.py  test_monitor.py  test_optionals.py  test_overloading.py  test_predicates.py  test_proxy.py  test_resources.py  test_rethrow.py  test_sequences.py  test_singleton.py  test_structures.py  test_syncable_droppable.py  test_transforms.py  test_treat_result_with.py  test_typing.py  test_var_managers.py
tests/test_configuration/: test_load_source_from_dict.py  test_schema.py
tests/test_debug/: test_environment.py
tests/test_exception_handling/: __init__.py  test_dump_frames_on.py  test_dump_to_file.py  test_memory_exception.py
tests/test_imports/: test_import.py
tests/test_instrumentation/: __init__.py  test_cpu_time.py  test_memory.py  test_metrics.py  test_trace_back.py
tests/test_os/: hang_until_sig.py  test_hang_until_sig.py  test_posix.py  test_suicide.py  test_whereis.py
tests/test_posix/: __init__.py  hang_until_sig.py  test_hang_until_sig.sh  test_posix.py  test_suicide.py
threads/: __init__.py  pipe.py  tqm.py
threads/unittests/: __init__.py  basethread.py  monitor.py  pipe.py  tqm.py
unix/: __init__.py
(+171 files in other folders)
