[project]
description = "A server writing library"
authors = [
    {name="Piotr Maślanka", email="pmaslanka@smok.co"}
]
keywords = ["ha", "high availability", "scalable", "scalability", "server", "metrics", "tracing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
license = {text="MIT License"}
maintainers = [
    {name="Piotr Maślanka", email="pmaslanka@smok.co"}
]
dependencies = [
    "psutil",
    "pyyaml",
    "toml",
    "requests"
]
requires-python = ">= 3.5"

[project.urls]
Homepage = "https://github.com/piotrmaslanka/satella"
Documentation = "https://satella.readthedocs.org"
Repository = "https://github.com/piotrmaslanka/satella.git"
Issues = "https://github.com/piotrmaslanka/satella/issues"
Changelog = "https://github.com/piotrmaslanka/satella/blob/develop/CHANGELOG.md"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = ["/"]
include = ["satella"]

[pytest]
minversion = 6.0
addopts = "-ra -q"
testpaths =
    tests

[tool.pytest.ini_options]
branch = true
concurrency=thread
omit=
  tests/*
  .eggs/*
  setup.py
  satella/__init__.py
  satella/os/signals.py

[tool.coverage.report]
ignore_errors = true