[metadata]
name = satella
version = 2.0.21
description-file = README.md
author = Piotr Maślanka
author_email = piotrm@smok.co
description = Utilities for writing servers in Python
url = https://github.com/piotrmaslanka/satella

classifier = 
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[pycodestyle]
max-line-length=80

[bdist_wheel]
universal=1

[nosetests]
verbosity=3
with-coverage=1
detailed-errors=1

[isort]
add_imports =
    from __future__ import absolute_import
    from __future__ import division
    from __future__ import print_function
    from __future__ import unicode_literals
