# coding: utf-8
[metadata]
name = satella
keywords = ha, high availability, scalable, scalability, server, metrics, tracing
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = piotr.maslanka@henrietta.com.pl
description = Utilities for writing servers in Python
url = https://github.com/piotrmaslanka/satella
project-urls =
    Documentation = https://satella.readthedocs.io/
	Code = https://github.com/piotrmaslanka/satella
	Issue tracker = https://github.com/piotrmaslanka/satella/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1

[options]
install_requires =
    psutil
python_requires = !=2.7.*,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
extras_require =
  HTTPJSONSource = requests
  YAMLSource = pyyaml
  TOMLSource = toml
  FasterJSON = ujson
  cassandra = cassandra-driver
  opentracing = opentracing
